--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio - Servicio Técnico</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <script src="bootstrap/js/jquery.slim.min.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-------FONT--------->
   <link rel="stylesheet" href="stylesheet.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,8 +47,8 @@
           <p class="title">SERVICIO TÉCNICO ESPECIALIZADO</p>
         </div>
         <div id="call" >
-          <p id="p-number" class="wow animate__rotateInDownRight" data-wow-duration="2s" data-wow-delay="0s"> CONCRETA UNA CITA YA</p>
-          <div id="box-number" class="wow animate__rotateInDownLeft" data-wow-duration="2s" data-wow-delay="0s">
+          <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA YA</p>
+          <div id="box-number" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
             <p id="number" > 971 58 63 98</p>
           </div>
         </div>
@@ -61,7 +59,7 @@
       <div class="justify-content-center text-center">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-6 col-md-10 col-10">
-            <img src="images/Electro/Electrodomesticos.png" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s" id="img-electro"/>
+            <img src="images/Electro/Electrodomesticos.png" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s" id="img-electro"/>
           </div>
           <div class="intro col-lg-6 col-md-10 col-10">
             Servicio Técnico de electrodomésticos, ubicado en <strong> Palma de Mallorca</strong>. <br> Contamos con mas de 10 años de experiencia en <strong>reparación, instalación y mantenimiento de todo tipo de electrodomésticos</strong>.
@@ -78,7 +76,7 @@
     <div class="container">
       <h5 id="title-up-boxes" class="wow animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0s">NOS ESPECIALIZAMOS EN</h5>
       <div class="row justify-content-center boxes-index wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Lavadoras</h5> 
           </div> 
@@ -87,7 +85,7 @@
           </div>  
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1s" data-wow-delay="0s"">
           <div>
             <h5 class="box-title-index"> Secadoras</h5>
           </div>
@@ -96,7 +94,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Frigoríficos</h5>
           </div>
@@ -105,7 +103,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1.4s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Lavavajillas</h5> 
           </div>
@@ -114,7 +112,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="1.6s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Hornos</h5> 
           </div>
@@ -123,7 +121,7 @@
           </div>     
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1.8s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Lava secadoras</h5>  
           </div>
@@ -132,7 +130,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Cocinas a Gas</h5>
           </div>
@@ -141,7 +139,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="2.2s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Cocinas Industriales</h5>
           </div>
@@ -150,7 +148,7 @@
           </div>       
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i  wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Cocinas a Inducción</h5>
           </div>
@@ -159,7 +157,7 @@
           </div>      
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="2.4s" data-wow-delay="0s">
           <div>
             <h5 class="box-title-index"> Fan Coil</h5>
           </div>
@@ -186,6 +184,8 @@
       </div>
   </div>
 </footer>
+<script src="bootstrap/js/jquery.slim.min.js"></script>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </div>
 </html>
