--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Inicio - Servicio Técnico</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <!-------FONT--------->
-  <link rel="stylesheet" href="stylesheet.css"/>
+  <link rel="stylesheet" href="css/main.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500&display=swap" rel="stylesheet">
@@ -44,7 +44,7 @@
     <div class="top-section">
       <div class="container">
         <div>
-          <p class="title">SERVICIO TÉCNICO ESPECIALIZADO</p>
+          <h1 class="title">SERVICIO TÉCNICO ESPECIALIZADO</h1>
         </div>
         <div id="call" >
           <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA YA</p>
