--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,7 +7,7 @@
   <title>Inicio - Servicio Técnico</title>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
   <!-------FONT--------->
-  <link rel="stylesheet" href="../stylesheet.css"/>
+  <link rel="stylesheet" href="../css/main.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500&display=swap" rel="stylesheet">
