--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   </div>      
   <div id="final-index">
     <div class="container">
-      <h5 id="title-up-boxes" class="wow animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0s">NOS ESPECIALIZAMOS EN</h5>
-      <div class="row justify-content-center boxes-index wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+      <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN</h5>
+      <div class="row justify-content-center boxes-index">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Lavadoras</h5> 
           </div> 
@@ -85,7 +85,7 @@
           </div>  
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1s" data-wow-delay="0s"">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Secadoras</h5>
           </div>
@@ -94,7 +94,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Frigoríficos</h5>
           </div>
@@ -103,25 +103,25 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1.4s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Lavavajillas</h5> 
           </div>
           <div>
-            <img src="./images/Electro/Lavavajillas.png" id="lavav">
+            <img src="./images/Electro/Lavavajillas.png" class="electro">
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="1.6s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Hornos</h5> 
           </div>
           <div>
-            <img src="./images/Electro/Horno-electrico.png" class="electro">
+            <img src="./images/Electro/Horno-electrico.png" id="horno">
           </div>     
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="1.8s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Lava secadoras</h5>  
           </div>
@@ -130,7 +130,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Cocinas a Gas</h5>
           </div>
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="2.2s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Cocinas Industriales</h5>
           </div>
@@ -148,7 +148,7 @@
           </div>       
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i  wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Cocinas a Inducción</h5>
           </div>
@@ -157,7 +157,16 @@
           </div>      
         </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i wow animate__fadeInRight" data-wow-duration="2.4s" data-wow-delay="0s">
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+          <div>
+            <h5 class="box-title-index"> Neveras</h5>
+          </div>
+          <div>
+            <img src="./images/Electro/nevera.png" id="nevera">
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
           <div>
             <h5 class="box-title-index"> Fan Coil</h5>
           </div>
@@ -165,6 +174,16 @@
             <img src="./images/Electro/Fan-coil.png" id="fan-coil">
           </div>     
         </div>
+
+        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+          <div>
+            <h5 class="box-title-index"> Campanas Extractoras</h5>
+          </div>
+          <div>
+            <img src="./images/Electro/campana.png" class="electro">
+          </div>
+        </div>
+
       </div>    
     </div>
   </div>
