agrgué SEO, mixin, extend y map

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Servicio Técnico</title>
+  <meta name="description" content="Contáctanos. Servicio Técnico en Palma. Contamos con más de 20 años de experiencia en reparación y mantenimiento de electrodomésticos">
+  <meta name="keywords" content="servicio técnico, contacto, cita, electrodomésticos, palma, reparación, mantenimineto, a docmicilio">
+  <title>Contacto - Servicio Técnico</title>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-  <!-------FONT--------->
   <link rel="stylesheet" href="../css/main.css"/>
+  <!-------FONT--------->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500&display=swap" rel="stylesheet">
+  <!-------------------->
+  <!-------fontawesome--------->
+  <link rel="stylesheet" href="../css/fontawesome_icons/css/all.min.css">
   <!-------------------->
   <link rel="shortcut icon" href="../images/Logo redondo.png" >
   <link href="../css/animate.css" rel="stylesheet">
@@ -22,22 +27,22 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top bg-primary">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <img src="../images/menu-white.png" class="menu-icon"/>
-        </button>
-        <div class="col-6 text-center">
-          <img src="../images/index.png" class ="logo"/>
-        </div>
-        <div class="collapse navbar-collapse col-6" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-            <li class="nav-item"><a class="nav-link" href="../index.html">INICIO </a></li>
-            <li class="nav-item "><a class="nav-link" href="servicios.html">SERVICIOS </a></li>
-            <li class="nav-item "><a class="nav-link" href="contacto.html">CONTACTO </a></li>
-            <li class="nav-item "><a class="nav-link" href="nosotros.html">NOSOTROS </a></li>
-            <li class="nav-item "><a class="nav-link" href="garantia.html">GARANTÍA </a></li>
-          </ul>
-        </div>
+    <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="images/menu-white.png" class="menu-icon"/>
+      </button>
+      <div class="col-6 text-center">
+        <img src="../images/index.png" class ="logo"/>
+      </div>
+      <div class="collapse navbar-collapse col-6" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+          <li class="nav-item"><a class="nav-link" href="../index.html">INICIO </a></li>
+          <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS </a></li>
+          <li class="nav-item active"><a class="nav-link" href="contacto.html">CONTACTO </a></li>
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">NOSOTROS </a></li>
+          <li class="nav-item"><a class="nav-link" href="garantia.html">GARANTÍA </a></li>
+        </ul>
+      </div>
     </nav>
   </header>
   <div class="container">
@@ -123,9 +128,21 @@
     Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
     © SAT PALMA
     </div>
+    <div class="col-md-12 col-sm-12 columns">
+      <div class="red-social">
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <i class="btn--facebook fa-brands fa-facebook-square"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="btn--instagram fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+      </div>
+    </div>
 </div>
 </footer>
-<script src="../bootstrap/js/jquery.slim.min.js"></script>
-<script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../bootstrap/js/jquery.min.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
