Ordene el código para que quede más limpio

--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!------- Descripción y keywords --------->
   <meta name="description" content="Nuestra garantía. Servicio Técnico en Palma. Contamos con más de 20 años de experiencia en reparación y mantenimiento de electrodomésticos">
   <meta name="keywords" content="servicio técnico, garantía, electrodomésticos, palma, reparación, mantenimineto, a docmicilio">
   <title>Garantía - Servicio Técnico</title>
+  <!------- Css --------->
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/main.css"/>
-  <!-------FONT--------->
+  <!------- Fuente --------->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500&display=swap" rel="stylesheet">
-  <!-------------------->
-  <!-------fontawesome--------->
+  <!---Iconos redes sociales --->
   <link rel="stylesheet" href="../css/fontawesome_icons/css/all.min.css">
-  <!-------------------->
+  <!------ Ícono de pagina ------->
   <link rel="shortcut icon" href="../images/Logo redondo.png" >
+
 </head>
 <body id="body-garantia">
 <header>
@@ -91,7 +93,9 @@
     </div>
 </div>
 </footer>
+<!------- Bootstrap Js --------->
 <script src="../bootstrap/js/jquery.min.js"></script>
 <script src="../bootstrap/js/bootstrap.min.js"></script>
+<!------------------------------>
 </body>
 </html>
