Agregue icono menu fontawesome en nav

--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -25,7 +25,7 @@
 <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="images/menu-white.png" class="menu-icon"/>
+        <i class="fa-solid fa-bars menu-icon"></i>
       </button>
       <div class="col-6 text-center">
         <img src="../images/index.png" class ="logo"/>
