agregué un carrusel en el index y col-8 al formulario pero no quedan centrados

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,7 +54,7 @@
             <h4>Somos una empresa dedicada a la reparación, mantenimiento e instalación de electrodomésticos y aparatos audiovisuales de uso particular e industrial. Nos destacamos en:</h4>
         </section>
         <div class="row justify-content-center boxes-nosotros">
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                 <h5> Asistencia Profesional</h5>
                 <p>Responsabilidad en el servicio de asistencia técnica.</p>  
             </div>
@@ -62,15 +62,15 @@
                 <h5> Especialización</h5>
                 <p>Unidades de departamentos especializados con una gran autonomía de gestión.</p>
             </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.4s" data-wow-delay="0s">
+            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.4s" data-wow-delay="0s">
                 <h5> Atención Personalizada</h5>
-                <p>Centro de atención unificado para garantizar tiempos y calidades con un altísimo grado de satisfacción por parte de los clientes.</p>
+                <p>Centro de atención unificado para garantizar un altísimo grado de satisfacción por parte de los clientes.</p>
             </div>
             <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.6s" data-wow-delay="0s">
                 <h5 class="box-title-nosotros"> Recursos Técnicos</h5>
                 <p>Disponemos de una planta taller y de I+D con más de 1.500 m2 de instalaciones.</p>
             </div>
-            <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="1.8s" data-wow-delay="0s">
+            <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.8s" data-wow-delay="0s">
                 <h5> Recursos Humanos</h5>
                 <p>Crecimiento empresarial generando empleo y ofreciendo formación contínua a nuestros empleados.</p>
             </div>
