--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -63,7 +63,7 @@
             </p>
           </div>
         
-          <div class="col-lg-4 col-md-6 col-10 box-unit-s-b wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+          <div class="col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
             <h5 class= "box-title-servicios"> INSTALACIÓN</h5>
             <p>
             Brindamos la posibilidad de elegir nuestro servicio de intalación para así despreocuparse y tener la seguridad de que nuestros técnicos especializados dejarán sus equipos listos para ser usados.
