--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
       </div>
     </div>
   </div>      
+
   <div id="final-index">
-    <div class="container">
+    <div id="final-index-boxes-pc">
+      <div class="container">
       <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN</h5>
       <div class="row justify-content-center boxes-index">
         <div class="col-lg-3 col-md-4 col-4 box-unit-i">
@@ -193,7 +195,81 @@
 
       </div>    
     </div>
+    </div>
+
+    <div id="final-index-mb">
+      <div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+          </ol>
+          <div>
+            <div class="justify-content-center">
+              <div class="carousel-inner col-6" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block w-100 image-slide" src="images/Electro/Cocina-a-gas.png" data-src="holder.js/900x400?theme=social" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100 image-slide" src="images/Electro/Frigorifico.png" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100 image-slide" src="images/Electro/Horno-electrico.png" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Lavasecadora.png" data-src="holder.js/900x400?theme=industrial" alt="4 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/campana.png" data-src="holder.js/900x400?theme=industrial" alt="5 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Lavavajillas.png" data-src="holder.js/900x400?theme=industrial" alt="6 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Lavadora.png" data-src="holder.js/900x400?theme=industrial" alt="7 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Cocina-industrial.png" data-src="holder.js/900x400?theme=industrial" alt="8 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Fan-coil.png" data-src="holder.js/900x400?theme=industrial" alt="9 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/Cocina-induccion.png" data-src="holder.js/900x400?theme=industrial" alt="10 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="images/Electro/" data-src="holder.js/900x400?theme=industrial" alt="11 slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 image-slide" src="#" data-src="holder.js/900x400?theme=industrial" alt="12 slide">
+                </div>
+              </div>
+            </div>
+          </div>  
+          <div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+      </div>
+    </div>
   </div>
+
 <footer class="footer-index">
     <div class="footer-top-index ">
       <div class="container">
