--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,66 +53,67 @@
           <section id="intro-forms">
             <h3> CONTÁCTANOS </h3> 
           </section>
-
-          <div class="form-style">
-            <!--FORMULARIO DE CONTACTO-->
-            <form action="forms.html" method="GET" enctype="application/x-www-form-urlencoded">
-              <div class="form-group">
-                <label for="nombre">Nombre y Apellido</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Escribe tu nombre y apellido">
-              </div>
-              <div class="form-group">
-                <label for="telefono">Teléfono</label>
-                <input type="number" class="form-control" id="telefono" placeholder="Escribe un teléfono">
-              </div>
-              <div class="form-group">
-                <label for="mail">Correo Electrónico</label>
-                <input type="text" class="form-control" id="mail" placeholder="ejemplo@gmail.com">
-              </div>
-              <div>
-                <label for="mail">Tipo de aparato</label>
-                <select class="custom-select">
-                  <option selected>Seleccionar</option>
-                  <option value="1">Nevera</option>
-                  <option value="2">Aire Acondicionado</option>
-                  <option value="4">Lavadora</option>
-                  <option value="5">Lavavajillas</option>
-                  <option value="6">Lavasecadora</option>
-                  <option value="7">Secadora</option>
-                  <option value="8">Cocina a Gas</option>
-                  <option value="9">Equipo Industrial</option>
-                  <option value="10">Horno Eléctrico</option>
-                  <option value="11">Frigorífico</option>
-                </select>
-              </div>
-
-              <div class="form-group">
-                <label for="descripcion"> Descripción de la avería que tiene el equipo </label>
-                <input class="form-control" type="text" placeholder="Escribe aqui">
-              </div>
-              
-              <div class="form-group"> 
-                <label for="garantia"> ¿El aparato está en garantía? </label>
-                <div class="custom-control custom-radio">
-                  <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-                  <label class="custom-control-label" for="customRadio1">Si</label>
+          <div class="justify-content-center">
+            <div class="col-8">
+              <!--FORMULARIO DE CONTACTO-->
+              <form action="forms.html" method="GET" enctype="application/x-www-form-urlencoded">
+                <div class="form-group">
+                  <label for="nombre">Nombre y Apellido</label>
+                  <input type="text" class="form-control" id="nombre" placeholder="Escribe tu nombre y apellido">
                 </div>
-                <div class="custom-control custom-radio">
-                  <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                  <label class="custom-control-label" for="customRadio2">No</label>
+                <div class="form-group">
+                  <label for="telefono">Teléfono</label>
+                  <input type="number" class="form-control" id="telefono" placeholder="Escribe un teléfono">
                 </div>
-              </div>  
+                <div class="form-group">
+                  <label for="mail">Correo Electrónico</label>
+                  <input type="text" class="form-control" id="mail" placeholder="ejemplo@gmail.com">
+                </div>
+                <div>
+                  <label for="mail">Tipo de aparato</label>
+                  <select class="custom-select">
+                    <option selected>Seleccionar</option>
+                    <option value="1">Nevera</option>
+                    <option value="2">Aire Acondicionado</option>
+                    <option value="4">Lavadora</option>
+                    <option value="5">Lavavajillas</option>
+                    <option value="6">Lavasecadora</option>
+                    <option value="7">Secadora</option>
+                    <option value="8">Cocina a Gas</option>
+                    <option value="9">Equipo Industrial</option>
+                    <option value="10">Horno Eléctrico</option>
+                    <option value="11">Frigorífico</option>
+                  </select>
+                </div>
 
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">He leído y acepto la Política de privacidad</label>
-              </div>
+                <div class="form-group">
+                  <label for="descripcion"> Descripción de la avería que tiene el equipo </label>
+                  <input class="form-control" type="text" placeholder="Escribe aqui">
+                </div>
+                
+                <div class="form-group"> 
+                  <label for="garantia"> ¿El aparato está en garantía? </label>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadio1">Si</label>
+                  </div>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadio2">No</label>
+                  </div>
+                </div>  
 
-              <div id="enviar">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-              </div>
-            </form>
-            <!--FIN FORMULARIO DE CONTACTO-->
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">He leído y acepto la Política de privacidad</label>
+                </div>
+
+                <div id="enviar">
+                  <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+              </form>
+              <!--FIN FORMULARIO DE CONTACTO-->
+            </div>
           </div>
         </div>
       </div>
