correción de error col, y agregué mapa

--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -27,10 +27,10 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars menu-icon"></i>
       </button>
-      <div class="col-6 text-center">
+      <div class="col-8 text-center">
         <img src="../images/index.png" class ="logo"/>
       </div>
-      <div class="collapse navbar-collapse col-6" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item"><a class="nav-link" href="../index.html">INICIO </a></li>
           <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS </a></li>
@@ -41,30 +41,34 @@
       </div>
     </nav>
 </header>
-<div class="justify-content-center" id="section-garantia">
-    <section class="container">
-        <section class="intro-garantia">
-            <h3>GARANTÍA DE NUESTROS SERVICIOS</h3>
-            <h4>Reparamos todo tipo de aparatos que estén fuera de la garantía legal que la propia marca o fabricante le ofrece, que por regla general suele ser de dos años. Sobre nuestro servicio técnico de reparación le ofrecemos una garantía comercial para su completa satisfacción durante un período de 3 meses.</h4>
-        </section>   
-        <section class="p-garantia"> 
-          <p> 
-            ARTÍCULO 6. GARANTÍA DE LAS REPARACIONES.
-          </p>
-          <p class="sub-title">
-            Extracto del Real Decreto 58/88 sobre protección al consumidor referente a la garantía. Artículo 6.
-          </p>
-          <ul class= "ul-garantia"> 
-            <li>6.1 Todas las reparaciones o instalaciones efectuadas en cualquier servicio de asistencia técnica, quedarán garantizadas en las condiciones que establece este artículo.</li>           
-            <li>6.2 La garantía que otorgue el servicio de asistencia técnica al respecto tendrá un período de validez mínimo de tres meses.</li>
-            <li>6.3 El período de garantía se entenderá desde la fecha de la entrega del aparato y tendrá validez en tanto en cuanto el mismo no sea manipulado o reparado por terceros.</li>
-            <li>6.4 La garantía se entiende total sobre la reparación efectuada y afectará a todos los gastos que se puedan ocasionar, tales como los del transporte que la reparación exija y el desplazamiento de los operarios que hubieran de efectuar dicha reparación siempre que correspondan a los abonados en factura anterior, las piezas de repuesto y material de cualquier clase que hubiera de utilizarse, así como la imposición fiscal que grave esa nueva operación.</li>
-            <li>6.5 No se podrá reclamar nueva reparación con cargo a la garantía, cuando la avería, se produzca como consecuencia de un uso inadecuado del aparato, o por causas de fuerza mayor. Esta circunstancia habrá de ser probada por el servicio de asistencia técnica que otorgó la garantía.</li>
-            <li>6.6 Si durante el período de garantía se reprodujera total o parcialmente una avería reparada o surgiera una nueva deficiencia originada por la misma reparación o instalación, el usuario deberá comunicar esta circunstancia al servicio de asistencia técnica que prestó la garantía. En este caso el usuario tendrá derecho a la reparación gratuita en el servicio de asistencia técnica garante.</li>
-          </ul>
-        </section>
-    </section>
-</div>  
+  <div class="justify-content-center" id="section-garantia">
+    <div class="container">
+      <section class="intro-garantia">
+        <h3>GARANTÍA DE NUESTROS SERVICIOS</h3>
+        <h4>Reparamos todo tipo de aparatos que estén fuera de la garantía legal que la propia marca o fabricante le ofrece, que por regla general suele ser de dos años. Sobre nuestro servicio técnico de reparación le ofrecemos una garantía comercial para su completa satisfacción durante un período de 3 meses.</h4>
+      </section>   
+      <section class="p-garantia"> 
+        <div class="row justify-content-center">
+          <div class="col-11">
+            <p> 
+              ARTÍCULO 6. GARANTÍA DE LAS REPARACIONES.
+            </p>
+            <p class="sub-title">
+              Extracto del Real Decreto 58/88 sobre protección al consumidor referente a la garantía. Artículo 6.
+            </p>
+            <ul class= "ul-garantia"> 
+              <li>6.1 Todas las reparaciones o instalaciones efectuadas en cualquier servicio de asistencia técnica, quedarán garantizadas en las condiciones que establece este artículo.</li>           
+              <li>6.2 La garantía que otorgue el servicio de asistencia técnica al respecto tendrá un período de validez mínimo de tres meses.</li>
+              <li>6.3 El período de garantía se entenderá desde la fecha de la entrega del aparato y tendrá validez en tanto en cuanto el mismo no sea manipulado o reparado por terceros.</li>
+              <li>6.4 La garantía se entiende total sobre la reparación efectuada y afectará a todos los gastos que se puedan ocasionar, tales como los del transporte que la reparación exija y el desplazamiento de los operarios que hubieran de efectuar dicha reparación siempre que correspondan a los abonados en factura anterior, las piezas de repuesto y material de cualquier clase que hubiera de utilizarse, así como la imposición fiscal que grave esa nueva operación.</li>
+              <li>6.5 No se podrá reclamar nueva reparación con cargo a la garantía, cuando la avería, se produzca como consecuencia de un uso inadecuado del aparato, o por causas de fuerza mayor. Esta circunstancia habrá de ser probada por el servicio de asistencia técnica que otorgó la garantía.</li>
+              <li>6.6 Si durante el período de garantía se reprodujera total o parcialmente una avería reparada o surgiera una nueva deficiencia originada por la misma reparación o instalación, el usuario deberá comunicar esta circunstancia al servicio de asistencia técnica que prestó la garantía. En este caso el usuario tendrá derecho a la reparación gratuita en el servicio de asistencia técnica garante.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>  
 <footer>
 <div class=" text-center">
     <div class="container footer-top">
