--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
   <script>
     new WOW().init();
   </script>
-
 </head>
-<div class="index">
 <body class="body-index">
-    <header>
-        <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fa-solid fa-bars menu-icon"></i>
-            </button>
-            <div class="col-6 text-center">
-              <img src="images/index.png" class ="logo"/>
-            </div>
-            <div class="collapse navbar-collapse col-6" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                <li class="nav-item active"><a class="nav-link" href="index.html">INICIO </a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/servicios.html">SERVICIOS </a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/contacto.html">CONTACTO </a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">NOSOTROS </a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/garantia.html">GARANTÍA </a></li>
-              </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="top-section">
-      <div class="container">
-        <div>
+  <header>
+    <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars menu-icon"></i>
+      </button>
+      <div class="col-8 text-center">
+        <img src="images/index.png" class ="logo"/>
+      </div>
+      <div class="collapse navbar-collapse col-4 blue" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+          <li class="nav-item active"><a class="nav-link" href="index.html">INICIO </a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/servicios.html">SERVICIOS </a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/contacto.html">CONTACTO </a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">NOSOTROS </a></li>
+          <li class="nav-item"><a class="nav-link" href="pages/garantia.html">GARANTÍA </a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="top-section">
+    <div class="container">
+      <div>
           <h1 class="title">SERVICIO TÉCNICO ESPECIALIZADO</h1>
         </div>
-        <div id="call" >
-          <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA YA</p>
-          <div id="box-number" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
-            <p id="number" > 971 58 63 98</p>
-          </div>
+      <div id="call" >
+        <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON NOSOTROS</p>
+        <div id="box-number" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
+          <p id="number" > 971 58 63 98</p>
         </div>
       </div>
     </div>
+  </div>
+
   <div class="div-intro">
     <div class="container">
       <div class="justify-content-center text-center">
@@ -83,192 +83,188 @@
   <div id="final-index">
     <div id="final-index-boxes-pc">
       <div class="container">
-      <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN</h5>
-      <div class="row justify-content-center boxes-index">
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Lavadoras</h5> 
-          </div> 
-          <div>
-            <img src="./images/Electro/Lavadora.png" class="electro">
-          </div>  
-        </div>
+        <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN</h5>
+        <div class="row justify-content-center boxes-index">
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Lavadoras</h5> 
+            </div> 
+            <div>
+              <img src="./images/Electro/Lavadora.png" class="electro">
+            </div>  
+          </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Secadoras</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Secadoras</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Secadora.png" class="electro">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/Secadora.png" class="electro">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Frigoríficos</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Frigoríficos</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Frigorifico.png" id="frigo">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/Frigorifico.png" id="frigo">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Lavavajillas</h5> 
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Lavavajillas</h5> 
+            </div>
+            <div>
+              <img src="./images/Electro/Lavavajillas.png" class="electro">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/Lavavajillas.png" class="electro">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Hornos</h5> 
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Hornos</h5> 
+            </div>
+            <div>
+              <img src="./images/Electro/Horno-electrico.png" id="horno">
+            </div>     
           </div>
-          <div>
-            <img src="./images/Electro/Horno-electrico.png" id="horno">
-          </div>     
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Lava secadoras</h5>  
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Lava secadoras</h5>  
+            </div>
+            <div>
+              <img src="./images/Electro/Lavasecadora.png" class="electro">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/Lavasecadora.png" class="electro">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Cocinas a Gas</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Cocinas a Gas</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Cocina-a-gas.png" class="electro">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/Cocina-a-gas.png" class="electro">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Cocinas Industriales</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Cocinas Industriales</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Cocina-industrial.png" id="cocina-indus">
+            </div>       
           </div>
-          <div>
-            <img src="./images/Electro/Cocina-industrial.png" id="cocina-indus">
-          </div>       
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Cocinas a Inducción</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Cocinas a Inducción</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Cocina-induccion.png" class="electro">
+            </div>      
           </div>
-          <div>
-            <img src="./images/Electro/Cocina-induccion.png" class="electro">
-          </div>      
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Neveras</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Neveras</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/nevera.png" id="nevera">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/nevera.png" id="nevera">
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Fan Coil</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Fan Coil</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/Fan-coil.png" id="fan-coil">
+            </div>     
           </div>
-          <div>
-            <img src="./images/Electro/Fan-coil.png" id="fan-coil">
-          </div>     
-        </div>
 
-        <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-          <div>
-            <h5 class="box-title-index"> Campanas Extractoras</h5>
+          <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+            <div>
+              <h5 class="box-title-index"> Campanas Extractoras</h5>
+            </div>
+            <div>
+              <img src="./images/Electro/campana.png" class="electro">
+            </div>
           </div>
-          <div>
-            <img src="./images/Electro/campana.png" class="electro">
-          </div>
-        </div>
-
-      </div>    
+        </div>    
     </div>
-    </div>
+  </div>
 
-    <div id="final-index-mb">
-      <div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
-          </ol>
-          <div>
-            <div class="justify-content-center">
-              <div class="carousel-inner col-6" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block w-100 image-slide" src="images/Electro/Cocina-a-gas.png" data-src="holder.js/900x400?theme=social" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100 image-slide" src="images/Electro/Frigorifico.png" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100 image-slide" src="images/Electro/Horno-electrico.png" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Lavasecadora.png" data-src="holder.js/900x400?theme=industrial" alt="4 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/campana.png" data-src="holder.js/900x400?theme=industrial" alt="5 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Lavavajillas.png" data-src="holder.js/900x400?theme=industrial" alt="6 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Lavadora.png" data-src="holder.js/900x400?theme=industrial" alt="7 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Cocina-industrial.png" data-src="holder.js/900x400?theme=industrial" alt="8 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Fan-coil.png" data-src="holder.js/900x400?theme=industrial" alt="9 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/Cocina-induccion.png" data-src="holder.js/900x400?theme=industrial" alt="10 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="images/Electro/" data-src="holder.js/900x400?theme=industrial" alt="11 slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 image-slide" src="#" data-src="holder.js/900x400?theme=industrial" alt="12 slide">
-                </div>
+  <div id="final-index-mb">
+    <div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div>
+          <div class="row justify-content-center">
+            <div class="carousel-inner col-6" role="listbox">
+              <div class="carousel-item active">
+                <img class="d-block w-100 image-slide" src="images/Electro/Cocina-a-gas.png" data-src="holder.js/900x400?theme=social" alt="Cocina-a-gas">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Frigorifico.png" data-src="holder.js/900x400?theme=industrial" alt="Frigorifico">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Horno-electrico.png" data-src="holder.js/900x400?theme=industrial" alt="Horno-electrico">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Lavasecadora.png" data-src="holder.js/900x400?theme=industrial" alt="Lavasecadora">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/campana.png" data-src="holder.js/900x400?theme=industrial" alt="campana">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Lavavajillas.png" data-src="holder.js/900x400?theme=industrial" alt="Lavavajillas">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Lavadora.png" data-src="holder.js/900x400?theme=industrial" alt="Lavadora">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Cocina-industrial.png" data-src="holder.js/900x400?theme=industrial" alt="cocina-indus">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide fan-coil" src="images/Electro/Fan-coil.png" data-src="holder.js/900x400?theme=industrial" alt="fan-coil">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Cocina-induccion.png" data-src="holder.js/900x400?theme=industrial" alt="Cocina-induccion">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/nevera.png" data-src="holder.js/900x400?theme=industrial" alt="Nevera">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 image-slide" src="images/Electro/Secadora.png" data-src="holder.js/900x400?theme=industrial" alt="Secadora">
               </div>
             </div>
-          </div>  
-          <div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
+        </div>  
+        <div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
+
+  <!--Google map-->
+  <div class="mapa">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-8 col-11 mapa-borde">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.1467857861066!2d2.629571715370603!3d39.578842079471315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129792625086bb6f%3A0x3130f76ff8e7a07a!2sC.%20de%20Son%20Calbet%2C%2011%2C%2007013%20Palma%2C%20Islas%20Baleares%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1658508912322!5m2!1ses!2sar" width="100%" height="400rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      </div>
+  </div>
+
+<!--Google Maps-->
 
 <footer class="footer-index">
     <div class="footer-top-index ">
