--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,16 +27,16 @@
   </script>
 
 </head>
-<body>
+<body class="body-index">
   <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars menu-icon"></i>
       </button>
-      <div class="col-6 text-center">
+      <div class="col-8 text-center">
         <img src="../images/index.png" class ="logo"/>
       </div>
-      <div class="collapse navbar-collapse col-6" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item"><a class="nav-link" href="../index.html">INICIO </a></li>
           <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS </a></li>
@@ -47,85 +47,91 @@
       </div>
     </nav>
   </header>
-  <div class="container">
+  <div class="contacto">
+    <div class="container">
       <div class="justify-content-center">
         <div>
           <section id="intro-forms">
             <h3> CONTÁCTANOS </h3> 
           </section>
-          <div class="justify-content-center">
-            <div class="col-8">
-              <!--FORMULARIO DE CONTACTO-->
-              <form action="forms.html" method="GET" enctype="application/x-www-form-urlencoded">
-                <div class="form-group">
-                  <label for="nombre">Nombre y Apellido</label>
-                  <input type="text" class="form-control" id="nombre" placeholder="Escribe tu nombre y apellido">
-                </div>
-                <div class="form-group">
-                  <label for="telefono">Teléfono</label>
-                  <input type="number" class="form-control" id="telefono" placeholder="Escribe un teléfono">
-                </div>
-                <div class="form-group">
-                  <label for="mail">Correo Electrónico</label>
-                  <input type="text" class="form-control" id="mail" placeholder="ejemplo@gmail.com">
-                </div>
-                <div>
-                  <label for="mail">Tipo de aparato</label>
-                  <select class="custom-select">
-                    <option selected>Seleccionar</option>
-                    <option value="1">Nevera</option>
-                    <option value="2">Aire Acondicionado</option>
-                    <option value="4">Lavadora</option>
-                    <option value="5">Lavavajillas</option>
-                    <option value="6">Lavasecadora</option>
-                    <option value="7">Secadora</option>
-                    <option value="8">Cocina a Gas</option>
-                    <option value="9">Equipo Industrial</option>
-                    <option value="10">Horno Eléctrico</option>
-                    <option value="11">Frigorífico</option>
-                  </select>
-                </div>
-
-                <div class="form-group">
-                  <label for="descripcion"> Descripción de la avería que tiene el equipo </label>
-                  <input class="form-control" type="text" placeholder="Escribe aqui">
-                </div>
-                
-                <div class="form-group"> 
-                  <label for="garantia"> ¿El aparato está en garantía? </label>
-                  <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-                    <label class="custom-control-label" for="customRadio1">Si</label>
+          <div class="row justify-content-center formulario">
+            <div class="col-lg-8 col-md-8 col-10">
+              <div>
+                <!--FORMULARIO DE CONTACTO-->
+                <form action="forms.html" method="GET" enctype="application/x-www-form-urlencoded">
+                  <div class="form-group">
+                    <label for="nombre">Nombre y Apellido</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Nombre y apellido">
                   </div>
-                  <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                    <label class="custom-control-label" for="customRadio2">No</label>
+                  <div class="form-group">
+                    <label for="telefono">Teléfono</label>
+                    <input type="number" class="form-control" id="telefono" placeholder="Escribe un teléfono">
                   </div>
-                </div>  
+                  <div class="form-group">
+                    <label for="mail">Correo Electrónico</label>
+                    <input type="text" class="form-control" id="mail" placeholder="ejemplo@gmail.com">
+                  </div>
+                  <div class="aparato-background">
+                    <label for="mail">Tipo de aparato</label>
+                    <select class="custom-select">
+                      <option selected>Seleccionar</option>
+                      <option value="1">Nevera</option>
+                      <option value="2">Aire Acondicionado</option>
+                      <option value="4">Lavadora</option>
+                      <option value="5">Lavavajillas</option>
+                      <option value="6">Lavasecadora</option>
+                      <option value="7">Secadora</option>
+                      <option value="8">Cocina a Gas</option>
+                      <option value="9">Equipo Industrial</option>
+                      <option value="10">Horno Eléctrico</option>
+                      <option value="11">Frigorífico</option>
+                    </select>
+                  </div>
 
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="customCheck1">
-                  <label class="custom-control-label" for="customCheck1">He leído y acepto la Política de privacidad</label>
-                </div>
+                  <div class="form-group margin-top">
+                    <textarea class="form-control" placeholder="Descripción de la avería que tiene el equipo" rows="6 " id="message " name="message"></textarea>
+                  </div>
+                  
+                  <div class="form-group"> 
+                    <label for="garantia"> ¿El aparato está en garantía? </label>
+                    <div class="custom-control custom-radio">
+                      <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+                      <label class="custom-control-label" for="customRadio1">Si</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                      <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+                      <label class="custom-control-label" for="customRadio2">No</label>
+                    </div>
+                  </div>  
 
-                <div id="enviar">
-                  <button type="submit" class="btn btn-primary">Enviar</button>
-                </div>
-              </form>
-              <!--FIN FORMULARIO DE CONTACTO-->
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1">
+                    <label class="custom-control-label" for="customCheck1">He leído y acepto la Política de privacidad</label>
+                  </div>
+
+                  <div class="margin-top text-center" id="enviar">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                  </div>
+                </form>
+                <!--FIN FORMULARIO DE CONTACTO-->
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
   </div>  
+
 <footer>
-<div class=" text-center">
-  <div class="container footer-top">
-    Horario atención telefónica: L - Sab / 9:00 - 20:00
-    <br>
-    Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+<div class="text-center">
+  <div class="footer-top-contacto">
+    <div class="container">
+      Horario atención telefónica: L - Sab / 9:00 - 20:00
+      <br>
+      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+    </div>
   </div>  
-  <div class="footer-bottom">
+  <div class="footer-bottom-index">
     <div class="container">
     Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
     Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
