cambio de colores y fondos pages

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,7 +27,7 @@
   </script>
 
 </head>
-<body class="body-index">
+<body class="body-img">
   <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
       </div>
     </nav>
   </header>
-  <div class="contacto">
+  <div class="contacto background-negro">
     <div class="container">
       <div class="justify-content-center">
         <div>
