--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -27,7 +27,7 @@
   </script>
 
 </head>
-<body id="body-servicios">
+<body class="body-img">
   <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,48 +47,53 @@
       </div>
     </nav>
   </header>
-  <div class="container">
-    <section class="intro-servicios">
-      <h3>NUESTROS SERVICIOS</h3>
-      <h4>Reparaciones a domilicio de cualquier electrodoméstico de uso doméstico y profesional: lavadoras-secadoras, lavavajillas, frigoríficos, hornos, cocinas vitrocerámicas, calderas, aires acondicionados.</h4>
-    </section>
+  <div>
+    <div class="background-negro">
+      <div class= "container">
+        <section class="intro-servicios">
+          <h3>NUESTROS SERVICIOS</h3>
+          <h4>Reparaciones a domilicio de cualquier electrodoméstico de uso doméstico y profesional: lavadoras-secadoras, lavavajillas, frigoríficos, hornos, cocinas vitrocerámicas, calderas, aires acondicionados.</h4>
+        </section>
 
-    <div class="boxes">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
-            <h5 class= "box-title-servicios"> REPARACIÓN</h5>
-            <p>
-            Nos especializamos en realizar reparaciones de todo tipo de Aires Acondicionados, Electrodomésticos y Calderas, ofreciendo la máxima calidad del sector garantizando así su mayor duración y correcto funcionamiento.
-            </p>
-          </div>
-        
-          <div class="col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
-            <h5 class= "box-title-servicios"> INSTALACIÓN</h5>
-            <p>
-            Brindamos la posibilidad de elegir nuestro servicio de intalación para así despreocuparse y tener la seguridad de que nuestros técnicos especializados dejarán sus equipos listos para ser usados.
-            </p>
-          </div>
+        <div class="boxes">
+          <div class="container">
+            <div class="row justify-content-center text-center">
+              <div class="col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+                <h5 class= "box-title-servicios"> REPARACIÓN</h5>
+                <p>
+                Nos especializamos en realizar reparaciones de todo tipo de Aires Acondicionados, Electrodomésticos y Calderas, ofreciendo la máxima calidad del sector garantizando así su mayor duración y correcto funcionamiento.
+                </p>
+              </div>
+            
+              <div class="col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+                <h5 class= "box-title-servicios"> INSTALACIÓN</h5>
+                <p>
+                Brindamos la posibilidad de elegir nuestro servicio de intalación para así despreocuparse y tener la seguridad de que nuestros técnicos especializados dejarán sus equipos listos para ser usados.
+                </p>
+              </div>
 
-          <div class=" col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
-            <h5 class= "box-title-servicios"> MANTENIMIENTO</h5>
-            <p>
-            Ofrecemos un servicio de mantenimiento reduciendo así la posibilidad de averías y su gravedad.
-            </p>
-          </div> 
+              <div class=" col-lg-4 col-md-6 col-10 box-unit-s wow animate__fadeInLeft" data-wow-duration="2s" data-wow-delay="0s">
+                <h5 class= "box-title-servicios"> MANTENIMIENTO</h5>
+                <p>
+                Ofrecemos un servicio de mantenimiento reduciendo así la posibilidad de averías y su gravedad.
+                </p>
+              </div> 
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
 <footer>
-<div class=" text-center">
-  <div class="container footer-top">
+<div class="text-center">
+  <div class="footer-top-contacto">
+    <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
       <br>
       Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+    </div>
   </div>  
-  <div class="footer-bottom">
+  <div class="footer-bottom-index">
     <div class="container">
       Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
       Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
