--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     new WOW().init();
   </script>
 </head>
-<body class="body-index">
+<body class="body-img body-index">
   <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -177,10 +177,10 @@
 
           <div class="col-lg-3 col-md-4 col-4 box-unit-i">
             <div>
-              <h5 class="box-title-index"> Fan Coil</h5>
+              <h5 class="box-title-index"> Aire Acondicionados</h5>
             </div>
             <div>
-              <img src="./images/Electro/Fan-coil.png" id="fan-coil">
+              <img src="./images/Electro/aire-acondicionado.png" id="aire-acondicionado">
             </div>     
           </div>
 
@@ -206,7 +206,7 @@
                 <img class="d-block w-100 image-slide" src="images/Electro/Cocina-a-gas.png" data-src="holder.js/900x400?theme=social" alt="Cocina-a-gas">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 image-slide" src="images/Electro/Frigorifico.png" data-src="holder.js/900x400?theme=industrial" alt="Frigorifico">
+                <img class="d-block w-100 image-slide" src="images/Electro/Frigorifico (1).png" data-src="holder.js/900x400?theme=industrial" alt="Frigorifico">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 image-slide" src="images/Electro/Horno-electrico.png" data-src="holder.js/900x400?theme=industrial" alt="Horno-electrico">
@@ -227,10 +227,10 @@
                 <img class="d-block w-100 image-slide" src="images/Electro/Cocina-industrial.png" data-src="holder.js/900x400?theme=industrial" alt="cocina-indus">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 image-slide fan-coil" src="images/Electro/Fan-coil.png" data-src="holder.js/900x400?theme=industrial" alt="fan-coil">
+                <img class="d-block w-100 image-slide" src="images/Electro/aire-acondicionado.png" data-src="holder.js/900x400?theme=industrial" alt="aire-acondicionado">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 image-slide" src="images/Electro/Cocina-induccion.png" data-src="holder.js/900x400?theme=industrial" alt="Cocina-induccion">
+                <img class="d-block w-100 image-slide vitro" src="images/Electro/Cocina-induccion.png" data-src="holder.js/900x400?theme=industrial" alt="Cocina-induccion">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 image-slide" src="images/Electro/nevera.png" data-src="holder.js/900x400?theme=industrial" alt="Nevera">
@@ -259,9 +259,9 @@
   <div class="mapa">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-8 col-11 mapa-borde">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.1467857861066!2d2.629571715370603!3d39.578842079471315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129792625086bb6f%3A0x3130f76ff8e7a07a!2sC.%20de%20Son%20Calbet%2C%2011%2C%2007013%20Palma%2C%20Islas%20Baleares%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1658508912322!5m2!1ses!2sar" width="100%" height="400rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.1467857861066!2d2.629571715370603!3d39.578842079471315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129792625086bb6f%3A0x3130f76ff8e7a07a!2sC.%20de%20Son%20Calbet%2C%2011%2C%2007013%20Palma%2C%20Islas%20Baleares%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1658508912322!5m2!1ses!2sar" width="100%" height="400rem" style="border:0;" allowfullscreen="" loading="fast" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      </div>
+    </div>
   </div>
 
 <!--Google Maps-->
