--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,7 +27,7 @@
   </script>
 
 </head>
-<body id="body-nosotros">
+<body class="body-img" id="body-nosotros">
 <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
         </div>
     </nav>
 </header>
-<div class="justify-content-center">
+<div class="background-negro justify-content-center">
     <div class="container">
         <section class="intro-nosotros">
             <h3> SOBRE NOSOTROS </h3>
@@ -72,7 +72,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1.8s" data-wow-delay="0s">
                 <h5> Recursos Humanos</h5>
-                <p>Crecimiento empresarial generando empleo y ofreciendo formación contínua a nuestros empleados.</p>
+                <p>Crecimiento empresarial ofreciendo formación contínua a nuestros empleados.</p>
             </div>
             <div class="col-lg-3 col-md-4 col-10 box-unit-n wow animate__fadeIn" data-wow-duration="2s" data-wow-delay="0s">
                 <h5> Responsabilidad</h5>
@@ -82,33 +82,35 @@
     </div>
 </div>
 <footer>
-<div class=" text-center">
-    <div class="container footer-top">
-        Horario atención telefónica: L - Sab / 9:00 - 20:00
-        <br>
-        Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
-    </div>  
-    <div class="footer-bottom">
-        <div class="container">
-        Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
-        Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
-        © SAT PALMA
-        </div>
-        <div class="col-md-12 col-sm-12 columns">
-            <div class="red-social">
-              <ul class="list-inline">
-                  <li class="list-inline-item">
-                      <i class="btn--facebook fa-brands fa-facebook-square"></i>
-                  </li>
-                  <li class="list-inline-item">
-                      <i class="btn--instagram fa-brands fa-instagram"></i>
-                  </li>
-              </ul>
-            </div>
-          </div>
+<div class="text-center">
+  <div class="footer-top-contacto">
+    <div class="container">
+      Horario atención telefónica: L - Sab / 9:00 - 20:00
+      <br>
+      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
     </div>
+  </div>  
+  <div class="footer-bottom-index">
+    <div class="container">
+      Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
+      Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
+      © SAT PALMA
+    </div>
+    <div class="col-md-12 col-sm-12 columns">
+      <div class="red-social">
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <i class="btn--facebook fa-brands fa-facebook-square"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="btn--instagram fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
-</footer> 
+</footer>
 <!------- Bootstrap Js --------->
 <script src="../bootstrap/js/jquery.min.js"></script>
 <script src="../bootstrap/js/bootstrap.min.js"></script>  
